@@ -1,6 +1,7 @@
 from version 0.10.0 to 0.10.1
 - events dispatch ipc service added
 - new --desktop server mode, but will require new ucommon (4.1.6 or later)
+- minimized linkage where we do not require sipwitch runtime
 
 from version 0.9.3 to 0.10.0
 - use of digest functions from usecure.
